chore: app cds + zgc support in containers