@@ -7,7 +7,7 @@
 ARG JDK_VERSION=20
 ARG APP_USER=app
 ARG APP_DIR="/app"
-ARG APP_JAR=app.jar
+ARG APP_JAR="app.jar"
 ARG SRC_DIR="/src"
 
 # DOCKER_BUILDKIT=1 docker build --progress=plain -t repo/jre-build:$(date +%s) -f Dockerfile --build-arg APP_USER=app --no-cache --target jre-build .
@@ -17,7 +17,7 @@ FROM openjdk:${JDK_VERSION}-slim AS jre-build
 LABEL maintainer="Suresh" \
       org.opencontainers.image.authors="Suresh" \
       org.opencontainers.image.title="Containers" \
-      org.opencontainers.image.description="🐳 Container/K8S/Compose playground using k3s/nerdctl/Rancher Desktop!" \
+      org.opencontainers.image.description="🐳 Container/K8S/Compose playground!" \
       org.opencontainers.image.version="1.0.0" \
       org.opencontainers.image.vendor="Suresh" \
       org.opencontainers.image.url="https://github.com/sureshg/containers" \
@@ -35,9 +35,9 @@ ARG SRC_DIR
 # ARG TARGETPLATFORM=linux/aarch64
 
 # Set HTTP(s) Proxy
-# ENV HTTP_PROXY="http://proxy.test.com:8080"
-# ENV HTTPS_PROXY="http://proxy.test.com:8080"
-# ENV NO_PROXY="*.test1.com,*.test2.com,127.0.0.1,localhost"
+# ENV HTTP_PROXY="http://proxy.test.com:8080" \
+#     HTTPS_PROXY="http://proxy.test.com:8080" \
+#     NO_PROXY="*.test1.com,*.test2.com,127.0.0.1,localhost"
 
 # Install objcopy for jlink
 RUN <<EOT
@@ -61,6 +61,7 @@ RUN --mount=type=bind,target=.,rw \
     --mount=type=cache,target=/root/.m2 \
     --mount=type=cache,target=/var/cache/apt \
     --mount=type=cache,target=/var/lib/apt <<EOT
+    set -eux
     echo "Building the application jar..."
     javac --enable-preview -verbose -g -parameters -Xlint:all -Xdoclint:none -Werror \
           --release ${JDK_VERSION} \
@@ -75,10 +76,11 @@ WORKDIR ${APP_DIR}
 ENV DIST /opt/java/openjdk
 
 RUN <<EOT
+ set -eux
  echo "Getting JDK module dependencies..."
  jdeps -q -R --ignore-missing-deps --print-module-deps --multi-release=${JDK_VERSION} *.jar > java.modules
 
- echo "Creating custom runtime image..."
+ echo "Creating custom JDK runtime image..."
  JAVA_TOOL_OPTIONS="-Djdk.lang.Process.launchMechanism=vfork"
  $JAVA_HOME/bin/jlink \
           --add-modules="jdk.crypto.ec,$(cat java.modules)" \
@@ -88,64 +90,91 @@ RUN <<EOT
           --compress=2 \
           --output $DIST
 
-  # Create default CDS archive for jlinked runtime and verify it
-  $DIST/bin/java -Xshare:dump
-  # Check if it worked, this will fail if it can't map the archive (lib/server/classes.jsa)
-  $DIST/bin/java -Xshare:on --version
+  # Create default CDS archive for jlinked runtime and verify it \
+  # https://malloc.se/blog/zgc-jdk15#class-data-sharing
+  $DIST/bin/java -XX:+UseZGC -Xshare:dump \
+
+  # Check if it worked, this will fail if it can't map the archive (lib/server/[classes.jsa,classes_nocoops.jsa])
+  $DIST/bin/java -XX:+UseZGC -Xshare:on --version \
+
   # List all modules included in the custom java runtime
   $DIST/bin/java --list-modules
 
   echo "Creating dynamic CDS archive by running the app..."
-  nohup $DIST/bin/java -XX:+AutoCreateSharedArchive -XX:SharedArchiveFile=${APP_DIR}/app.jsa -jar ${APP_JAR} & \
-    sleep 1 && \
-    curl -sfL http://localhost/test && \
-    curl -sfL http://localhost/shutdown \
-    || sleep 1; exit 0
+  nohup $DIST/bin/java \
+        --show-version \
+        --enable-preview \
+        -XX:+UseZGC \
+        -XX:+AutoCreateSharedArchive \
+        -XX:SharedArchiveFile=${APP_DIR}/app.jsa \
+        -jar ${APP_JAR} & \
+  sleep 1 && \
+  curl -fsSL http://localhost/test && \
+  curl -fsSL http://localhost/shutdown || echo "Shutdown completed!"
 
-  du -kcsh * | sort -n
+  # Give some time to generate the CDS archive
+  sleep 1
+  du -kcsh * | sort -rh
   du -kcsh $DIST
 EOT
 
 # Create inline file
-COPY <<-EOT /app/info
+COPY <<-EOT ${APP_DIR}/info
  APP=${APP_DIR}/${APP_JAR}
  JDK_VERSION=${JDK_VERSION}
 EOT
 
 ##### App Image #####
-# DOCKER_BUILDKIT=1 docker build -t repo/app:latest -f Dockerfile --build-arg APP_USER=app --no-cache --target openjdk .
+# DOCKER_BUILDKIT=1 docker build -t repo/app:latest -f Dockerfile --build-arg APP_USER=app --target openjdk .
 # DOCKER_BUILDKIT=1 docker build -t repo/app:latest -f Dockerfile --build-arg APP_USER=app --no-cache --secret id=db,src="$(pwd)/env/pgadmin.env" --target openjdk .
 # docker run -it --rm --entrypoint "/bin/bash" --pull always repo/app:latest -c "id; pwd"
 # docker run -it --rm -p 8080:80 repo/app:latest
 FROM --platform=$BUILDPLATFORM gcr.io/distroless/java-base-debian11:nonroot as openjdk
+# FROM gcr.io/distroless/java-base:latest AS openjdk
 # FROM debian:stable-slim AS openjdk
 
 ARG APP_DIR
-ENV JAVA_HOME=/opt/java/openjdk
-ENV PATH "${JAVA_HOME}/bin:${PATH}"
 
-# ENV LANG='en_US.UTF-8' LANGUAGE='en_US:en' LC_ALL='en_US.UTF-8'
-# ENV LANG en_US.UTF-8 \
-#     TZ "PST8PDT"
+# Declaration and usage of same ENV var should be in two ENV instructions.
+ENV JAVA_HOME=/opt/java/openjdk
+ENV PATH="${JAVA_HOME}/bin:${PATH}"
+#   LANG='en_US.UTF-8' LANGUAGE='en_US:en' LC_ALL='en_US.UTF-8' \
+#   TZ "PST8PDT"
+
+WORKDIR ${APP_DIR}
+# RUN <<EOT
+#   echo "Creating a 'app' user/group"
+#   useradd --home-dir ${APP_DIR} --create-home --uid 5000 --shell /bin/bash --user-group ${APP_USER}
+# EOT
+# USER ${APP_USER}
 
 # These copy will run concurrently on BUILDKIT.
 COPY --link --from=jre-build --chmod=755 $JAVA_HOME $JAVA_HOME
 COPY --link --from=jre-build --chmod=755 ${APP_DIR} ${APP_DIR}
 # COPY --link --from=openjdk:${JDK_VERSION}-slim $JAVA_HOME $JAVA_HOME
 
-WORKDIR ${APP_DIR}
-# Create a user/group
-# RUN useradd --home-dir ${APP_DIR} --create-home --uid 5000 --shell /bin/bash --user-group ${APP_USER}
-# USER ${APP_USER}
-
 # USER nobody:nobody
-# COPY --from=jre-build --chown=nobody:nobody /opt/java /opt/java
+# COPY --link --from=jre-build --chown=nobody:nobody $JAVA_HOME $JAVA_HOME
 
 # Shell vs Exec - https://docs.docker.com/engine/reference/builder/#run
 # ENTRYPOINT ["java"]
-CMD ["java", "--show-version", "-XX:+PrintCommandLineFlags", "-XX:+AutoCreateSharedArchive", "-XX:SharedArchiveFile=/app/app.jsa", "-jar", "app.jar"]
+
+# Both ARG and ENV are not expanded in ENTRYPOINT or CMD
+# https://stackoverflow.com/a/36412891/416868
+CMD ["java", \
+     "--show-version", \
+     "--enable-preview", \
+     # "-Xlog:cds", \
+     "-XX:+UseZGC", \
+     "-XX:+PrintCommandLineFlags", \
+     "-XX:+AutoCreateSharedArchive", \
+     "-XX:SharedArchiveFile=app.jsa", \
+     "-jar", "app.jar"]
+
 EXPOSE 80/tcp
 
+# HEALTHCHECK --interval=30s --timeout=10s --retries=3 \
+#            CMD java --version || exit 1
 
 # Container to print assembly generated by JVM C1/C2 compilers
 FROM openjdk:${JDK_VERSION}-slim as hsdis
@@ -192,14 +221,9 @@ ENTRYPOINT ["java", "--show-version", "-jar", "app.jar"]
 ##### GraalVM NativeImage Build #####
 FROM ghcr.io/graalvm/native-image:latest as graalvm
 
-# RUN gu install native-image \
-#    && native-image --version
-
 WORKDIR /app
 COPY App.java /app/App.java
-# --enable-all-security-services
-# --report-unsupported-elements-at-runtime
-# --initialize-at-build-time=kotlinx,kotlin,org.slf4j
+
 RUN javac App.java \
     && native-image \
     --static \
